--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
+    "express-coffee-script": "^0.2.0",
     "morgan": "~1.5.1",
     "pug": "^2.0.0-alpha6",
     "pug-load": "^1.0.3",
