--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pug": "^2.0.0-alpha6",
     "pug-load": "^1.0.3",
     "pug-loader": "^1.0.2",
+    "redis": "^2.6.0-2",
     "semantic-ui": "^2.1.8",
     "serve-favicon": "~2.2.0"
   }
