--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "dependencies": {
     "body-parser": "~1.10.2",
     "coffee-script": "^1.8.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
     "express-coffee-script": "^0.2.0",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.13.0",
     "morgan": "~1.5.1",
     "pug": "^2.0.0-alpha6",
     "pug-load": "^1.0.3",
