--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express-coffee-script": "^0.2.0",
     "express-messages": "^1.0.1",
     "express-session": "^1.13.0",
+    "mongodb": "^2.1.18",
+    "mongoskin": "^2.1.0",
     "morgan": "~1.5.1",
     "pug": "^2.0.0-alpha6",
     "pug-load": "^1.0.3",
