--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
+    "dotenv": "^2.0.0",
     "express": "~4.11.1",
     "express-coffee-script": "^0.2.0",
     "express-messages": "^1.0.1",
     "express-session": "^1.13.0",
     "kue": "^0.10.5",
+    "mailcomposer": "^3.8.0",
+    "mailgun-js": "^0.7.10",
     "mongodb": "^2.1.18",
     "mongoskin": "^2.1.0",
     "morgan": "~1.5.1",
