--- a/process.yml
+++ b/process.yml
@@ -1,10 +1,11 @@
 apps:
-  - script : bin/start.coffee
-    instances: 4
-    exec_mode: cluster
-    watch : true
-    env:
-      NODE_ENV: development
-    env_production:
-      NODE_ENV: production
+  name: Coffee alarm
+  script: bin/start.coffee
+  instances: 4
+  exec_mode: cluster
+  watch: true
+  env:
+    NODE_ENV: development
+  env_production:
+    NODE_ENV: production
 
