--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^2.1.18",
     "mongoskin": "^2.1.0",
     "morgan": "~1.5.1",
+    "nodemailer": "^2.3.2",
     "pug": "^2.0.0-alpha6",
     "pug-load": "^1.0.3",
     "pug-loader": "^1.0.2",
