--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mailcomposer": "^3.8.0",
     "mailgun-js": "^0.7.10",
     "mongodb": "^2.1.18",
+    "mongoose": "^4.4.16",
     "mongoskin": "^2.1.0",
     "morgan": "~1.5.1",
     "nodemailer": "^2.3.2",
