--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.10.2",
     "coffee-script": "^1.8.0",
+    "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
@@ -24,6 +25,8 @@
     "mongoskin": "^2.1.0",
     "morgan": "~1.5.1",
     "nodemailer": "^2.3.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-alpha6",
     "pug-load": "^1.0.3",
     "pug-loader": "^1.0.2",
