feat(config): redis 支持读取配置

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 MAILGUN_DOMAIN=your mailgun domain
 MAILGUN_KEY=your mailgun key
 SESSION_SECRET=your session secret
+MONGO_HOST=your mongodb host
+MONGO_PORT=your mongodb port
+REDIS_HOST=your redis host
+REDIS_PORT=your redis port
