feat(process.yml): 修改 cluster 为 fork

--- a/process.yml
+++ b/process.yml
@@ -1,8 +1,8 @@
 apps:
   name: Coffee alarm
   script: bin/start.coffee
-  instances: 1
-  exec_mode: cluster
+  instances: 4
+  exec_mode: fork
   watch: true
   env:
     NODE_ENV: development
